# example_project_structure

./: Cargo.toml  README.MD
benches/: simple_bench.rs
benches/multi-file-bench/: bench_module.rs  main.rs
examples/: simple.rs
examples/multi-file-example/: ex_module.rs  main.rs
src/: additional.rs  combined.rs  lib.rs  main.rs
src/combined/: mod1.rs  mod2.rs
src/utils/: utils.rs
tests/: some-integration-tests.rs
tests/multi-file-test/: main.rs  test_module.rs
